--- a/css/styles.css
+++ b/css/styles.css
@@ -5,12 +5,12 @@
 
 :root {
   --navBarBackground: #000000;
+  --pageBackground: rgba(0, 0, 0, 0.9);
   --contentTextColor: #ffffff;
   --navTextColor: #ffffff;
-  --locationBox: #0fc8a5;
-  --admissionBox: #0bc2d4;
   --headingText: #0fc8a5;
   --eventBox: linear-gradient(to right, #0fc8a5, black);
+  --visitBoxBackground: #000000;
 }
 
 /*======================================================================
@@ -34,7 +34,6 @@ Mobile
 /*==============
 1. Global Values
 ================*/
-
 html {
   margin: 0;
   padding: 0;
@@ -60,7 +59,6 @@ a:hover {
 /*==============
 2. Nav Bar
 ================*/
-
 header {
   position: fixed;
   width: 100%;
@@ -120,8 +118,36 @@ header {
   justify-content: center;
   text-align: center;
   height: 1200px;
+  z-index: 1;
 }
 
 /*==============
 3. Landing Page
 ================*/
+.home-article-1 {
+  background-image: url(/images/pexels-pixabay-459475.jpg);
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  min-height: 300px;
+  top: 70px;
+  position: absolute;
+  z-index: -1;
+}
+
+.home-article-1 h1 {
+  color: var(--headingText);
+  text-align: center;
+}
+
+.home-article-1 p {
+  color: var(--contentTextColor);
+  text-align: center;
+  padding-inline: 20px;
+}
+
+@media (min-width 800px) {
+  .hamburger-menu-elements {
+    display: flex;
+  }
+}
