--- a/css/styles.css
+++ b/css/styles.css
@@ -110,10 +110,14 @@ header {
   display: none;
 }
 
+.hamburger-menu-elements {
+  padding: 0;
+}
+
 .hamburger-menu-elements a {
   padding: 0;
   margin-top: 50px;
-  color: var(--clickableLinks);
+  color: var(--contentTextColor);
 }
 
 .hamburger-menu-elements li {
@@ -182,6 +186,7 @@ header {
 .home-section-2 {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .home-section-2-article {
@@ -190,7 +195,7 @@ header {
   height: 300px;
   width: 350px;
   margin: 0;
-  margin-top: 20px;
+  margin-block: 10%;
 }
 
 .home-section-2-article-image-1 {
@@ -229,13 +234,13 @@ header {
 
 .event-section {
   padding: 20px;
-  margin-top: 20px;
   background: var(--eventBox);
   color: var(--contentTextColor);
 }
 
 .event-article-wrapper {
   display: flex;
+  flex-wrap: wrap;
   gap: 10px;
 }
 
@@ -243,6 +248,42 @@ header {
 .event-header {
   text-decoration: underline;
   font-weight: 800;
+}
+
+.event-header {
+  font-size: 1.5rem;
+  margin: 0;
+}
+
+.event-section h4 {
+  font-size: 1.2rem;
+}
+
+footer {
+  min-height: 150px;
+}
+
+footer img {
+  height: 100px;
+}
+
+.footer-elements {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: var(--navBarBackground);
+}
+
+.footer-elements a {
+  color: var(--contentTextColor);
+  font-size: 1.3rem;
+}
+
+.footer-background {
+  background-image: url(/images/celso-405219.jpg);
+  background-position: center;
+  background-size: cover;
+  min-height: 50px;
 }
 
 /*=================
@@ -257,7 +298,7 @@ header {
   .nav-container {
     display: flex;
     position: absolute;
-    top: 10px;
+    top: 20px;
     right: 20px;
   }
 
@@ -281,5 +322,9 @@ header {
 
   .home-section-1 p {
     padding-inline: 20%;
+  }
+
+  .event-article-wrapper {
+    flex-wrap: nowrap;
   }
 }
