--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,7 @@ a:hover {
 .navigation-buttons {
   color: var(--buttonText);
   background-color: var(--buttonBackground);
-  width: 150px;
+  width: 100%;
   height: 40px;
   display: flex;
   justify-content: center;
@@ -331,5 +331,9 @@ footer img {
 
   .event-article-wrapper {
     flex-wrap: nowrap;
+  }
+
+  .home-section-2-article {
+    min-width: 350px;
   }
 }
