--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "roboto", Verdana, Tahoma, sans-serif;
-  src: url(/fonts/RobotoCondensed-Regular.ttf);
+  font-family: "roboto";
+  src: url(/fonts/ShareTech-Regular.ttf);
 }
 
 :root {
@@ -15,6 +15,8 @@
   --buttonBackground: #0fc8a5;
   --buttonText: #000000;
   --clickableLinks: #0fc8a5;
+  --fontContent: 1.2rem;
+  --fontHeading: 1.5rem;
 }
 
 /*======================================================================
@@ -76,7 +78,7 @@ a:hover {
   justify-content: center;
   align-items: center;
   font-weight: 800;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 }
 
 /*==============
@@ -89,11 +91,9 @@ header {
 
 .logo-link-container {
   height: 70px;
-  width: 100%;
   background-color: var(--navBarBackground);
   color: var(--navTextColor);
   display: flex;
-  font-weight: 800;
   text-align: center;
   justify-content: space-between;
 }
@@ -105,6 +105,11 @@ header {
 
 .home-logo-link p {
   color: var(--navTextColor);
+  font-weight: 800;
+  font-size: 1.5rem;
+  margin: 0;
+  display: flex;
+  align-items: center;
 }
 
 .nav-container {
@@ -119,10 +124,10 @@ header {
   padding: 0;
   margin-top: 50px;
   color: var(--contentTextColor);
+  font-size: 2rem;
 }
 
 .hamburger-menu-elements li {
-  font-size: 2rem;
   margin-block: 40%;
 }
 
@@ -168,14 +173,15 @@ header {
 .home-section-1 h1 {
   color: var(--headingText);
   text-align: center;
-  font-size: 2rem;
+  font-size: 3rem;
+  margin-bottom: 0;
 }
 
 .home-section-1 p {
   color: var(--contentTextColor);
   text-align: center;
   padding-inline: 20px;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 }
 
 .home-section-wrapper {
@@ -222,7 +228,7 @@ header {
 .home-section-2-article h2 {
   margin: 0;
   margin-top: 10px;
-  font-size: 1.3rem;
+  font-size: var(--fontHeading);
   font-weight: 800;
   color: var(--headingText);
 }
@@ -230,6 +236,7 @@ header {
 .home-section-2-article p {
   color: var(--contentTextColor);
   margin-top: 5px;
+  font-size: var(--fontContent);
 }
 
 .button-position {
@@ -262,7 +269,11 @@ header {
 }
 
 .event-section h4 {
-  font-size: 1.2rem;
+  font-size: var(--fontHeading);
+}
+
+.event-section p {
+  font-size: var(--fontContent);
 }
 
 footer {
@@ -282,7 +293,7 @@ footer img {
 
 .footer-elements a {
   color: var(--contentTextColor);
-  font-size: 1.3rem;
+  font-size: 2rem;
 }
 
 .footer-background {
@@ -326,8 +337,13 @@ footer img {
 2d. Desktop Landing Page
 ========================*/
 
+  .home-section-1 h1 {
+    font-size: 4rem;
+  }
+
   .home-section-1 p {
     padding-inline: 20%;
+    font-size: 2rem;
   }
 
   .event-article-wrapper {
