--- a/css/styles.css
+++ b/css/styles.css
@@ -285,6 +285,7 @@ header {
 .event-article-wrapper {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
   gap: 10px;
 }
 
@@ -307,6 +308,10 @@ header {
 
 .event-section p {
   font-size: var(--fontContent);
+}
+
+.event-article-fix {
+  padding-top: 27px;
 }
 
 footer {
@@ -471,6 +476,11 @@ footer img {
   text-align: center;
   display: block;
   margin: auto;
+}
+
+.visit-us-wrapper * {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .visit-us-wrapper h2,
