--- a/css/styles.css
+++ b/css/styles.css
@@ -75,9 +75,11 @@ a:visited {
 a:hover {
   text-decoration: underline;
   text-decoration-thickness: 3px;
+  cursor: pointer;
 }
 
 .navigation-buttons {
+  border: none;
   color: var(--buttonText);
   background-color: var(--buttonBackground);
   width: 100%;
@@ -89,6 +91,13 @@ a:hover {
   font-size: 1.5rem;
 }
 
+/*This is specifically for the contact form button in the visit us page*/
+.navigation-buttons:hover {
+  text-decoration: underline;
+  text-decoration-thickness: 3px;
+  cursor: pointer;
+}
+
 h2,
 h3,
 h4 {
@@ -98,6 +107,15 @@ h4 {
 p {
   color: var(--contentTextColor);
   line-height: 2.3rem;
+}
+
+input {
+  font-family: "roboto", Verdana, Tahoma, sans-serif;
+  height: 40px;
+}
+
+textarea {
+  font-family: "roboto", Verdana, Tahoma, sans-serif;
 }
 
 /*=============
@@ -492,6 +510,13 @@ h1 {
 .visit-us-location {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.visit-us-google-maps {
+  width: 100%;
+  height: 400px;
+  border: none;
 }
 
 .location-text {
@@ -533,6 +558,59 @@ h1 {
 .visit-us-admission {
   display: flex;
   flex-direction: column;
+}
+
+.visit-us-contact p {
+  font-size: 1.3rem;
+  margin-inline: 10px;
+}
+
+.visit-us-contact-form {
+  width: 80%;
+  margin: auto;
+}
+
+.visit-us-contact-link {
+  color: var(--clickableLinks);
+  font-size: 1.5rem;
+  font-weight: 800;
+}
+
+.visit-us-contact-link:hover {
+  text-decoration-color: var(--clickableLinks);
+}
+
+.visit-us-contact-info-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.visit-us-contact-info-name,
+.visit-us-contact-info-email,
+.visit-us-textfield {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 0;
+}
+
+input#name,
+input#email {
+  width: 100%;
+  font-size: 1.2rem;
+}
+
+.visit-us-contact label {
+  margin: 0;
+  color: var(--headingText);
+  font-size: 1.5rem;
+}
+
+textarea#text {
+  width: 100%;
+  font-size: 1.2rem;
 }
 
 /*=============
@@ -607,4 +685,13 @@ Desktop Values
   /*=======================
 4d. Desktop Visit Page
 ===========================*/
+
+  .visit-us-contact-info-wrapper {
+    flex-direction: row;
+  }
+
+  input#name,
+  input#email {
+    width: 80%;
+  }
 }
